# r3f-jolt

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css
src/JoltPhysics.js/: CMakeLists.txt  JoltJS-API.md  build.bat  build.ps1
src/jolt/: PhysicsProvider.tsx  RigidBody.tsx  SoftBody.tsx  types.d.ts  utils.ts
